--- a/web/www/static/vbaner.css
+++ b/web/www/static/vbaner.css
@@ -11,6 +11,11 @@
 	font-family:Arial, Helvetica, sans-serif;
 }
 
+table.pretty {
+	margin-left: auto;
+	margin-right: auto;
+}
+
 p#categories {
 	font-size: 11px;
 	margin-left: auto;
